--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ rand_xoshiro = "0.6.0"
 rand = "0.8.5"
 clap = { version = "4.0.29", features = ["derive"] }
 num = "0.4.0"
+svdlibrs = "0.5.0"
+nalgebra-sparse = "0.8.0"
